# glide

./: .gitignore  .licensesnip  .licensesnipignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  agents.md  build.rs  flake.nix  glide.default.toml  release-please-config.json  release-plz.toml
.gemini/: config.yaml
.github/workflows/: package.yml  release-please.yml  release.yml  rust.yml  test.yml
.zed/: settings.json
assets/app_icon.icon/: icon.json
examples/: devtool.rs  group_indicators.rs  make_windows.rs  slwin.rs
site/: astro.config.mjs  package-lock.json  package.json
site/src/: content.config.ts  style.css
site/src/content/docs/: index.mdx
site/src/content/docs/guides/: keyboard-centric-setup.mdx  layout-examples.mdx
site/src/content/docs/reference/: config.mdx
site/src/plugins/: remark-readme-import.ts
src/: actor.rs  collections.rs  config.rs  lib.rs  log.rs  model.rs  sys.rs
src/actor/: app.rs  dock.rs  group_bars.rs  group_indicators.rs  layout.rs  mouse.rs  notification_center.rs  raise.rs  reactor.rs  server.rs  space_manager.rs  status.rs  window_server.rs  wm_controller.rs
src/actor/reactor/: animation.rs  main_window.rs  replay.rs  testing.rs
src/config/: partial.rs
src/model/: layout_mapping.rs  layout_tree.rs  scroll_constraints.rs  scroll_viewport.rs  selection.rs  size.rs  spring.rs  tree.rs  window.rs
src/sys/: app.rs  bundle.rs  event.rs  executor.rs  geometry.rs  menu_bar.rs  message_port.rs  observer.rs  run_loop.rs  screen.rs  status_bar.rs  timer.rs  window_server.rs
src/ui/: group_bar.rs  group_indicator.rs  mod.rs  permission_flow.rs  status_bar.rs
