[package]
name = "glide-wm"
version = "0.0.2"
edition = "2024"

license = "Apache-2.0 OR MIT"
description = "A tiling window manager for macOS"
authors = ["Tyler Mandry"]
readme = "README.md"
homepage = "https://glidewm.org"
repository = "https://github.com/glide-wm/glide"

publish = false

[[bin]]
name = "glide"
test = false

# We don't have a need for unwinding, and aborting means we don't have to worry
# about propagating panics to the main CFRunLoop thread.
#
# However, since panic-abort-tests is not stable yet, we will always build test
# deps with panic=unwind. Therefore dev builds continue to use panic=unwind
# with a panic hook that aborts so we can reuse dependency builds.
[profile]
release.panic = "abort"

[dependencies]
accessibility = { version = "0.3.0", git = "https://github.com/eiz/accessibility", branch = "master" }
accessibility-sys = { version = "0.2.0", git = "https://github.com/eiz/accessibility", branch = "master" }
anyhow = "1.0.83"
ascii_tree = "0.1.1"
bitflags = "2.4.1"
clap = { version = "4.5.4", features = ["derive"] }
core-foundation = "0.10.1"
core-graphics = "0.25.0"
core-graphics-types = "0.2.0"
dirs = "5.0.1"
indexmap = { version = "2.10.0", features = ["serde"] }
livesplit-hotkey = "0.8.0"
macro_rules_attribute = "0.2.2"
objc2 = "0.6.2"
objc2-app-kit = { version = "0.3.2", default-features = false, features = [
    "NSAlert",
    "NSApplication",
    "NSButton",
    "NSControl",
    "NSColor",
    "NSEvent",
    "NSFont",
    "NSGraphics",
    "NSImage",
    "NSRunningApplication",
    "NSResponder",
    "NSScreen",
    "NSStatusBar",
    "NSStatusBarButton",
    "NSStatusItem",
    "NSText",
    "NSTextField",
    "NSView",
    "NSWindow",
    "NSWindowScripting",
    "NSWorkspace",
    "objc2-core-foundation",
    "objc2-core-graphics",
    "objc2-quartz-core",
] }
objc2-quartz-core = { version = "0.3.2", default-features = false, features = [
    "CALayer",
    "objc2-core-foundation",
    "objc2-core-graphics",
] }
objc2-core-foundation = { version = "0.3.2", default-features = false, features = [
    "CFCGTypes",
    "CFRunLoop",
    "CFDate",
] }
objc2-core-graphics = { version = "0.3.2", default-features = false, features = [
    "CGDirectDisplay", "CGRemoteOperation", "CGError"
] }
objc2-foundation = { version = "0.3.2", default-features = false, features = [
    "NSArray",
    "NSEnumerator",
    "NSNotification",
    "NSKeyValueCoding",
    "NSString",
    "NSThread",
    "NSValue",
] }
rand = "0.8.5"
redact = { version = "0.1.11", features = ["serde"] }
ron = "0.12.0"
rustc-hash = "2.0.0"
serde = { version = "1.0.201", features = ["derive"] }
serde_with = "3.9.0"
slotmap = { version = "1.0.7", features = ["serde"] }
sorted-vec = "0.8.10"
static_assertions = "1.1.0"
tokio = { version = "1.35.1", features = ["macros", "sync"] }
tokio-stream = "0.1.16"
tokio-util = "0.7.15"
toml = "0.9.2"
tracing = "0.1.40"
tracing-appender = { version = "0.2.4" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-timing = { version = "0.6.0", features = ["layer"] }
tracing-tree = { version = "0.4.1", features = ["time"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
tokio = { version = "1.35.1", features = ["rt", "sync", "macros"] }
test-log = { version = "0.2.16", default-features = false, features = [
    "trace",
] }
tempfile = { version = "3.17.1", default-features = false }

[package.metadata.packager]
productName = "Glide"
identifier = "org.glidewm.glide"
icons = ["assets/app_icon-128x128@2x.png"]
binaries = [
    {path = "glide", main = true}
]
macos.signingIdentity = "Developer ID Application: Tyler Mandry (77455J9D7M)"

# We want the application to activate on first run so the permission flow isn't
# covered by other apps, so we don't mark it as a background app for now.
# Instead, we set the activation policy after the app starts.
# macos.backgroundApp = true
